--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "examples/taint/sec16almeida/verifying-constant-time"]
 	path = examples/taint/sec16almeida/verifying-constant-time
 	url = https://github.com/imdea-software/verifying-constant-time
+[submodule "examples/taint/s2n/s2n-tls"]
+	path = examples/taint/s2n/s2n-tls
+	url = https://github.com/aws/s2n-tls
